--- a/configure.in
+++ b/configure.in
@@ -1199,9 +1199,6 @@ To build run:
 $warn_use_download	make
 	bin/ooinstall <path-to-install>
 
-	This is trunk - the unstable branch for post-2.2 development.
-	If you want to build the stable OOo, use:
-		ooo-build-2-0-4	 branch for 2.0.4
-		ooo-build-2-1    branch for 2.1
-		ooo-build-2-2    branch for 2.2
+	This is ooo-build-2-3 - the stable branch for the 2.3.x release.
+	If you want to build something cool, unstable, and risky, use trunk.
 "
