Allow to add hotfixes to an already released ooo-build an easier way.
* patches/hotfixes, patches/hotfixes/Makefile.am, 
configure.in, patches/Makefile.am, patches/hotfixes/README,
patches/apply.pl.in: allow to add hotfixes to an already released
ooo-build an easier way. Read patches/hotfixes/README for more
details.

--- a/patches/apply.pl.in
+++ b/patches/apply.pl.in
@@ -392,6 +392,7 @@ sub list_patches(@) {
     foreach $distro ( @distros ) {
 	@Patches = ( @Patches, list_patches_single( $distro ) );
     }
+    @Patches = ( @Patches, list_hotfix_patches() );
 
     return @Patches;
 }
@@ -561,6 +562,23 @@ sub list_patches_single {
     checkTerminal (\%subsets, \%referenced, $forDistro);
 
     return @Patches;
+}
+
+sub list_hotfix_patches
+{
+    my $dirh;
+    my @hotfix_patches;
+
+    if (opendir($dirh, $hotfixes_dir)) {
+	while (my $file = readdir ($dirh)) {
+	    $file =~ /^\./ && next;     # hidden
+	    $file =~ /\.diff$/ || next; # non-patch
+	    push @hotfix_patches, "$hotfixes_dir/$file";
+	}
+	closedir($dirh);
+    }
+    	
+    return (sort @hotfix_patches);
 }
 
 sub applied_patches_list
@@ -991,6 +1009,7 @@ $patch_dir = shift (@arguments);
 substr ($patch_dir, 0, 1) eq '/' || die "apply.pl requires absolute paths";
 
 $apply_list = $patch_dir.'/apply';
+$hotfixes_dir = $patch_dir.'/../hotfixes';
 
 print "Execute with $opts for distro(s) '" . join( " ", @distros ) . "'\n" unless ($quiet);
 
