--- a/configure.in
+++ b/configure.in
@@ -1118,6 +1118,7 @@ patches/Makefile
 patches/cairo/Makefile
 patches/evo2/Makefile
 patches/gstreamer/Makefile
+patches/hotfixes/Makefile
 patches/vba/Makefile
 patches/mono/Makefile
 patches/ooxml/Makefile
