Allow to add hotfixes to an already released ooo-build an easier way.
* patches/hotfixes, patches/hotfixes/Makefile.am, 
configure.in, patches/Makefile.am, patches/hotfixes/README,
patches/apply.pl.in: allow to add hotfixes to an already released
ooo-build an easier way. Read patches/hotfixes/README for more
details.

--- a/patches/Makefile.am
+++ b/patches/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS=64bit cairo emf+ evo2 gstreamer mono ooxml scsolver src680 vba postgresql
+SUBDIRS=64bit cairo emf+ evo2 gstreamer hotfixes mono ooxml scsolver src680 vba postgresql
 
 EXTRA_DIST=README apply.pl.in $(wildcard *.diff)
