--- a/configure.in
+++ b/configure.in
@@ -1145,6 +1145,7 @@ patches/cairo/Makefile
 patches/evo2/Makefile
 patches/emf+/Makefile
 patches/gstreamer/Makefile
+patches/hotfixes/Makefile
 patches/vba/Makefile
 patches/mono/Makefile
 patches/ooxml/Makefile
