Enable sd-default-format-n285959.
* Version 2.3.0.4.6

* patches/src680/apply: enable sd-default-format-n285959.diff to apply

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT(ooo-build, 2.3.0.4.5)
+AC_INIT(ooo-build, 2.3.0.4.6)
 AC_PREREQ(2.51)
 AC_CONFIG_SRCDIR(bin/build-ooo)
 AC_PREFIX_DEFAULT(/usr)
@@ -1116,6 +1116,7 @@ etc/Makefile
 patches/apply.pl
 patches/Makefile
 patches/cairo/Makefile
+patches/emf+/Makefile
 patches/evo2/Makefile
 patches/gstreamer/Makefile
 patches/hotfixes/Makefile
