Update version info and the section about reporting bugs; FIXME: I am not sure if bugzilla.
* man/openoffice.1_SUSE.in, man/openoffice.1.in: update version info
and the section about reporting bugs; FIXME: I am not sure if
bugzilla.novell.com is the right default place for GoOOo bugs

--- a/man/openoffice.1_SUSE.in
+++ b/man/openoffice.1_SUSE.in
@@ -1,4 +1,4 @@
-.TH ooffice "1" "2006-11-15" "OpenOffice.org 2.0.x" "User Commands"
+.TH ooffice "1" "2008-03-18" "OpenOffice.org 2.x" "User Commands"
 .SH "Name"
 ooffice@BINSUFFIX@ \- OpenOffice.org office suite
 .SH SYNOPSIS
@@ -156,11 +156,10 @@ Starts with an empty HTML document.
 Starts with an empty Writer document.
 
 .SH TROUBLESHOOTING PROBLEMS
-If OOo crashes, you should get a GUI bug reporting tool, please use
-that to file a helpful bug report, or see \fBhttp://go\-ooo.org/hackers\-guide.html\fR
-for more information on debugging OOo.
+See \fBhttp://en.opensuse.org/Bugs:OOo\fR for more details about how to report
+bugs in OpenOffice.org.
 .SH SEE ALSO
-.BR http://go\-ooo.org/
+.BR http://go\-oo.org/
 .SH AUTHOR
 This manual page was created by Rene Engelhard <rene@debian.org> for
 the Debian GNU/Linux Distribution, because the original package does not have
