--- a/distro-configs/CommonLinux.conf.in
+++ b/distro-configs/CommonLinux.conf.in
@@ -7,6 +7,7 @@
 --with-system-jpeg
 --with-system-libxml
 --with-system-mozilla
+--with-system-openssl
 --with-system-python
 --with-system-stdlibs
 --with-system-zlib
