--- a/configure.in
+++ b/configure.in
@@ -1307,10 +1307,7 @@ To build run:
 $warn_use_download	make
 	bin/ooinstall <path-to-install>
 
-	This is trunk - the unstable branch for post-2.3 development.
-	If you want to build the stable OOo, use:
-		ooo-build-2-0-4	 branch for 2.0.4
-		ooo-build-2-1    branch for 2.1
-		ooo-build-2-2    branch for 2.2
-		ooo-build-2-3    branch for 2.3
+	This is OOo-2.4 branch for SLED10-SP2.
+	If you want to build something cool, unstable, and risky, use trunk
+	and the DEV300 tree.
 "
