Add the configure option --with-additional-sections; It allows to apply the experimental sections easily without changing the apply file; useful to produce various test builds
* configure.in, Makefile.shared, patches/apply.pl.in: add the configure
option --with-additional-sections; It allows to apply the
experimental sections easily without changing the apply file;
useful to produce various test builds

--- a/Makefile.shared
+++ b/Makefile.shared
@@ -25,6 +25,9 @@ $(OOBUILDDIR)/unpack :
 		if grep localize.sdf $(OOBUILDDIR)/sw/source/ui/app/localize.sdf > /dev/null 2>&1 ; then \
 			FLAGS="$$FLAGS --distro=Localize"; \
 		fi ; \
+		if test -n "$(OOO_ADDITIONAL_SECTIONS)" ; then \
+			FLAGS="$$FLAGS --additional-sections=$(OOO_ADDITIONAL_SECTIONS)"; \
+		fi ; \
 		chmod +x $(TOOLSDIR)/patches/apply.pl && $(TOOLSDIR)/patches/apply.pl $(APPLY_DIR) $(OOBUILDDIR) $$FLAGS -f -R ; \
 	fi
 	cd $(top_srcdir)/bin ; ./unpack
@@ -85,6 +88,9 @@ $(STAMP_DIR)/patch.apply : $(top_srcdir)/patches/apply.pl \
 	if test $(OOO_LANGS) != en-US ; then \
 		FLAGS="$$FLAGS --distro=Localize"; \
 	fi ; \
+	if test -n "$(OOO_ADDITIONAL_SECTIONS)" ; then \
+		FLAGS="$$FLAGS --additional-sections=$(OOO_ADDITIONAL_SECTIONS)"; \
+	fi ; \
 	chmod +x $(TOOLSDIR)/patches/apply.pl && $(TOOLSDIR)/patches/apply.pl $(APPLY_DIR) $(OOBUILDDIR) $$FLAGS --tag=$(CVSTAG) ;
 	$(TOOLSDIR)/bin/transform --apply $(TOOLSDIR) $(OOBUILDDIR)
 	$(TOOLSDIR)/bin/fix-deps $(OOBUILDDIR)
@@ -105,6 +111,9 @@ patch.unapply:
 	fi ; \
 	if grep localize.sdf $(OOBUILDDIR)/sw/source/ui/app/localize.sdf > /dev/null 2>&1 ; then \
 		FLAGS="$$FLAGS --distro=Localize"; \
+	fi ; \
+	if test -n "$(OOO_ADDITIONAL_SECTIONS)" ; then \
+		FLAGS="$$FLAGS --additional-sections=$(OOO_ADDITIONAL_SECTIONS)"; \
 	fi ; \
 	chmod +x $(TOOLSDIR)/patches/apply.pl && $(TOOLSDIR)/patches/apply.pl $(APPLY_DIR) $(OOBUILDDIR) $$FLAGS -R ;
 	rm -f $(STAMP_DIR)/patch.apply
