--- a/configure.in
+++ b/configure.in
@@ -69,6 +69,17 @@ AC_ARG_WITH(poor-help-localizations,
 			Example:  --with-poor-help-localizations="af ar ca"],
 ,)
 
+AC_ARG_WITH(additional-sections,
+[
+  --with-additional-sections
+			define list of additional sections that should be
+			enabled in the apply file; It allows to easily
+			enable experimental sets of patches that are not
+			applied by default.
+
+			Example:
+			    --with-additional-sections="EMFPlus PostgreSQL"
+],,)
 
 AC_ARG_ENABLE(dbgutil,
 [  --enable-dbgutil:       Include additional debugging utilities, such as
@@ -994,6 +1005,23 @@ fi
 AC_MSG_RESULT([$OOO_POOR_HELP_LOCALIZATIONS])
 AC_SUBST(OOO_POOR_HELP_LOCALIZATIONS)
 
+AC_MSG_CHECKING([for additional sections])
+OOO_ADDITIONAL_SECTIONS=
+if test -n "$with_additional_sections" -a \
+	"$with_additional_sections" != "no" -a \
+	"$with_additional_sections" != "yes" ; then
+    # change the delimiter from the space to the comma
+    for section in $with_additional_sections ; do
+	if test -z "$OOO_ADDITIONAL_SECTIONS" ; then
+	    OOO_ADDITIONAL_SECTIONS="$section"
+	else
+	    OOO_ADDITIONAL_SECTIONS="$OOO_ADDITIONAL_SECTIONS,$section"
+	fi
+    done
+fi
+AC_MSG_RESULT([$OOO_ADDITIONAL_SECTIONS])
+AC_SUBST(OOO_ADDITIONAL_SECTIONS)
+
 AC_MSG_CHECKING([whether to enable Mono bindings])
 if test -n "$enable_mono" ; then
     if test "$enable_mono" != "no" ; then
@@ -1290,6 +1318,7 @@ Building openoffice
 	tools dir:          $TOOLSDIR
 	src package dir:    $SRCDIR
 	distro:             $DISTRO
+	add sections:       ${OOO_ADDITIONAL_SECTIONS:-no}
 	widget sets:        ${widget_sets:-disabled}
 	openclipart:        ${OPENCLIPART_VER:-${OPENCLIPART_DIR:-no}}
 	mono bindings:	    $mono_enabled
