--- a/configure.in
+++ b/configure.in
@@ -1336,10 +1336,6 @@ To build run:
 $warn_use_download	make
 	bin/ooinstall <path-to-install>
 
-	This is trunk - the unstable branch for post-2.3 development.
-	If you want to build the stable OOo, use:
-		ooo-build-2-0-4	 branch for 2.0.4
-		ooo-build-2-1    branch for 2.1
-		ooo-build-2-2    branch for 2.2
-		ooo-build-2-3    branch for 2.3
+	This is ooo-build-2-4 - the stable branch for the 2.4.x release.
+	If you want to build something cool, unstable, and risky, use trunk.
 "
