--- a/distro-configs/SUSE.conf.in
+++ b/distro-configs/SUSE.conf.in
@@ -15,8 +15,12 @@
 --with-system-cairo
 --with-system-curl
 --with-system-db
---without-system-icu
 --with-system-expat
+--with-system-hunspell
+--with-system-icu
+--with-system-libwpd
+--with-system-libwpg
+--with-system-libwps
 --with-system-libxslt
 --with-system-mozilla=xulrunner
 --with-system-neon
