--- a/configure.in
+++ b/configure.in
@@ -840,7 +840,7 @@ if test "z$with_dejavu_fonts" != "z" -a "z$with_dejavu_fonts" != "zno" ; then
     else
 	AC_MSG_ERROR([--with-dejavu-fonts requires either yes, no, or a version number])
     fi
-elif
+else
     DEJAVU_FONTS_VER=2.24
     DEJAVU_FONTS_PACK_NAME=dejavu-fonts-ttf-$DEJAVU_FONTS_VER
 fi
