--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT(ooo-build, 2.4.0.8)
+AC_INIT(ooo-build, 2.4.0.9)
 AC_PREREQ(2.51)
 AC_CONFIG_SRCDIR(bin/build-ooo)
 AC_PREFIX_DEFAULT(/usr)
@@ -366,6 +366,10 @@ dnl Setup the misc. tweaks we need.
 dnl
 BASEDIR=`pwd`
 TOOLSDIR=$BASEDIR
+
+# it will be modified by the --with-additional-sections but it might 
+# modified also by other options
+OOO_ADDITIONAL_SECTIONS=
 
 AC_PATH_PROG(PERL, perl)
 if test -z "PERL"; then
@@ -840,9 +844,12 @@ if test "z$with_dejavu_fonts" != "z" -a "z$with_dejavu_fonts" != "zno" ; then
     else
 	AC_MSG_ERROR([--with-dejavu-fonts requires either yes, no, or a version number])
     fi
-else
-    DEJAVU_FONTS_VER=2.24
-    DEJAVU_FONTS_PACK_NAME=dejavu-fonts-ttf-$DEJAVU_FONTS_VER
+    # also apply some extra patches
+    if test -z "$OOO_ADDITIONAL_SECTIONS" ; then
+	OOO_ADDITIONAL_SECTIONS="DejaVuFonts"
+    else
+	OOO_ADDITIONAL_SECTIONS="$OOO_ADDITIONAL_SECTIONS,DejaVuFonts"
+    fi
 fi
 AC_MSG_RESULT([${DEJAVU_FONTS_VER:-no}])
 AC_SUBST(DEJAVU_FONTS_VER)
@@ -1006,22 +1013,6 @@ fi
 AC_MSG_RESULT([$OOO_POOR_HELP_LOCALIZATIONS])
 AC_SUBST(OOO_POOR_HELP_LOCALIZATIONS)
 
-AC_MSG_CHECKING([for additional sections])
-OOO_ADDITIONAL_SECTIONS=
-if test -n "$with_additional_sections" -a \
-	"$with_additional_sections" != "no" -a \
-	"$with_additional_sections" != "yes" ; then
-    # change the delimiter from the space to the comma
-    for section in $with_additional_sections ; do
-	if test -z "$OOO_ADDITIONAL_SECTIONS" ; then
-	    OOO_ADDITIONAL_SECTIONS="$section"
-	else
-	    OOO_ADDITIONAL_SECTIONS="$OOO_ADDITIONAL_SECTIONS,$section"
-	fi
-    done
-fi
-AC_MSG_RESULT([$OOO_ADDITIONAL_SECTIONS])
-AC_SUBST(OOO_ADDITIONAL_SECTIONS)
 
 AC_MSG_CHECKING([whether to enable Mono bindings])
 if test -n "$enable_mono" ; then
@@ -1166,6 +1157,25 @@ if test "z$with_mirror" != "z" ; then
    MIRROR="$with_mirror"
 fi
 AC_SUBST(MIRROR)
+
+# IMPORTANT: keep this on the end of configure because other configure options might 
+# add some own OOO_ADDITIONAL_SECTIONS
+AC_MSG_CHECKING([for additional sections])
+if test -n "$with_additional_sections" -a \
+	"$with_additional_sections" != "no" -a \
+	"$with_additional_sections" != "yes" ; then
+    # change the delimiter from the space to the comma
+    for section in $with_additional_sections ; do
+	if test -z "$OOO_ADDITIONAL_SECTIONS" ; then
+	    OOO_ADDITIONAL_SECTIONS="$section"
+	else
+	    OOO_ADDITIONAL_SECTIONS="$OOO_ADDITIONAL_SECTIONS,$section"
+	fi
+    done
+fi
+AC_MSG_RESULT([$OOO_ADDITIONAL_SECTIONS])
+AC_SUBST(OOO_ADDITIONAL_SECTIONS)
+
 
 OOX_MODULE_TARBALL="oox.2008-02-29.tar.bz2"
 AC_SUBST(OOX_MODULE_TARBALL)
