Add --without-fonts and --with-system-mozilla=firefox.
* distro-configs/Frugalware.conf.in: Add --without-fonts and
--with-system-mozilla=firefox.

--- a/distro-configs/Frugalware.conf.in
+++ b/distro-configs/Frugalware.conf.in
@@ -9,7 +9,6 @@
 --with-system-hunspell
 --with-system-odbc-headers
 --with-system-nas
---with-firefox
 --with-system-freetype
 --with-system-xalan
 --with-serializer-jar=/usr/share/java/serializer.jar
@@ -28,3 +27,5 @@
 --enable-gcjaot
 --with-system-libxslt
 --with-system-libwpd
+--without-fonts
+--with-system-mozilla=firefox
