2008-05-13  Petr Mladek  <pmladek@suse.cz>
* Branched for OOo-2.4.1:
anchor tag OOO-BUILD-2-4-1-ANCHOR
branch ooo-build-2-4-1

* default tag ooh680-m14

--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@ AC_PREREQ(2.51)
 AC_CONFIG_SRCDIR(bin/build-ooo)
 AC_PREFIX_DEFAULT(/usr)
 
-DEFAULT_TAG=ooh680-m12
+DEFAULT_TAG=ooh680-m14
 # For the upstream packages it is like:
 # DEFAULT_TAG=OOH680_m12
 
@@ -1347,6 +1347,8 @@ To build run:
 $warn_use_download	make
 	bin/ooinstall <path-to-install>
 
-	This is ooo-build-2-4 - the stable branch for the 2.4.x release.
+	This is ooo-build-2-4-1 - the stable branch for the 2.4.1 release.
+	If you want to add a fix for the OOo-2.4 maintenace update, use the
+	ooo-build-2-4 branch.
 	If you want to build something cool, unstable, and risky, use trunk.
 "
