2008-05-13  Petr Mladek  <pmladek@suse.cz>
* Branched for OOo-2.4.1:
anchor tag OOO-BUILD-2-4-1-ANCHOR
branch ooo-build-2-4-1

--- a/configure.in
+++ b/configure.in
@@ -1347,6 +1347,7 @@ To build run:
 $warn_use_download	make
 	bin/ooinstall <path-to-install>
 
-	This is ooo-build-2-4 - the stable branch for the 2.4.x release.
+	This is ooo-build-2-4 - the stable branch for the 2.4 release.
+	If you want to use OOo-2.4.1, use the ooo-build-2-4-1 branch.
 	If you want to build something cool, unstable, and risky, use trunk.
 "
