--- a/configure.in
+++ b/configure.in
@@ -1238,6 +1238,7 @@ distro-configs/SUSE-10.0.conf
 distro-configs/SUSE-10.1.conf
 distro-configs/SUSE-10.2.conf
 distro-configs/SUSE-10.3.conf
+distro-configs/SUSE-11.0.conf
 distro-configs/Mandriva.conf
 distro-configs/Mandriva64.conf
 distro-configs/NovellWin32.conf
