--- a/configure.in
+++ b/configure.in
@@ -3,9 +3,9 @@ AC_PREREQ(2.51)
 AC_CONFIG_SRCDIR(bin/build-ooo)
 AC_PREFIX_DEFAULT(/usr)
 
-DEFAULT_TAG=ooh680-m15
+DEFAULT_TAG=ooh680-m16
 # For the upstream packages it is like:
-# DEFAULT_TAG=OOH680_m15
+# DEFAULT_TAG=OOH680_m16
 
 # The option tar-ustar is necessary because of some patches have too long
 # names so that they cannot be archived using the old V7 format
@@ -1135,6 +1135,8 @@ elif test "$with_tag" = "OOG680_m9" ; then
    UPSTREAM_VERSION=2.3.1
 elif test "$with_tag" = "OOH680_m12" ; then
    UPSTREAM_VERSION=2.4.0
+elif test "$with_tag" = "OOH680_m16" ; then
+   UPSTREAM_VERSION=2.4.1
 fi
 if test -n "$UPSTREAM_VERSION"; then
    UPSTREAM_NAME="OOo_${UPSTREAM_VERSION}_src"
