--- a/configure.in
+++ b/configure.in
@@ -1407,11 +1407,8 @@ To build run:
 $warn_use_download	make
 	bin/ooinstall <path-to-install>
 
-	This is trunk - the unstable branch for post-2.4 development.
-	If you want to build the stable OOo, use:
-		ooo-build-2-2    branch for 2.2
-		ooo-build-2-3    branch for 2.3
-		ooo-build-2-4    branch for 2.4
+	This is ooo-build-3-0 - the stable branch for the 3.0 release.
+	If you want to build something cool, unstable, and risky, use trunk.
 "
 
 if test "$BUILD_WIN32" != "yes" -a "$ENABLE_ICECREAM" != "yes"; then
