--- a/configure.in
+++ b/configure.in
@@ -301,6 +301,14 @@ AC_ARG_WITH(openclipart,
 				   --with-openclipart=/usr/share/openclipart],
 ,)
 
+
+AC_ARG_WITH(sun-templates,
+[
+  --with-sun-templates      Provides automatic download and integration of SUN
+			  Microsystems' template packages relesead to Extensions site.],
+,)
+
+
 AC_ARG_WITH(dejavu-fonts,
 [
   --with-dejavu-fonts     Download and install updated DejaVu Fonts. The parameter is
@@ -1182,6 +1190,20 @@ else
     SYSTEM_LIBWPG=NO
 fi
 AC_SUBST(SYSTEM_LIBWPG)
+
+
+AC_MSG_CHECKING([for SUN templates intergration])
+if test "z$with_sun_templates" = "zyes" ; then
+    SUNTEMPLATES_LANG="$with_lang"
+elif test "z$with_sun_templates" = "z" -o "z$with_lang" = "zno" ; then
+	SUNTEMPLATES_LANG=""
+    AC_MSG_RESULT([no])
+else
+	SUNTEMPLATES_LANG="$with_sun_templates"
+fi
+AC_MSG_RESULT([$SUNTEMPLATES_LANG])
+AC_SUBST(SUNTEMPLATES_LANG)
+
 
 AC_MSG_CHECKING([whether to enable debugging code])
 if test "$enable_dbgutil" = "yes" ; then
