SUN -> Sun rename.
* patches/dev300/scp2_extensions.diff
* download.in: SUN -> Sun rename.

--- a/download.in
+++ b/download.in
@@ -100,7 +100,7 @@ sub trim($)
 # OxygenOffice extras
 #    'OOOP-.*\.zip'                 	 => 'http://kent.dl.sf.net/sourceforge/ooop/'
     'OOOP-.*\.zip'                 	 => 'http://ftp.devall.hu/kami/go-oo/',
-# SUN Template Pack
+# Sun Professional Template Pack
     'Sun_ODF_Template_Pack_en-US.oxt'	 => 'http://extensions.services.openoffice.org/files/273/0/',
     'Sun_ODF_Template_Pack_de.oxt'	 => 'http://extensions.services.openoffice.org/files/295/1/',
     'Sun_ODF_Template_Pack_it.oxt'	 => 'http://extensions.services.openoffice.org/files/299/0/',
