Add /basis-link and update for new default profile dir
* bin/oosmoketest.in: add /basis-link and update for new default
profile dir

--- a/bin/oosmoketest.in
+++ b/bin/oosmoketest.in
@@ -4,11 +4,11 @@ GUI="UNX"
 TEMP="/tmp"
 PERL="/usr/bin/perl"
 OOINSTBASE="@OOINSTBASE@"
-OOUSERDIR="$HOME/.openoffice.org2"
+OOUSERDIR="$HOME/.openoffice.org/3"
 
 export GUI TEMP PERL OOINSTBASE OOUSERDIR
 
-test -d "$OOUSERDIR/user/basic" && cp -r "$OOINSTBASE/presets/basic/Standard" "$OOUSERDIR/user/basic"
+test -d "$OOUSERDIR/user/basic" && cp -r "$OOINSTBASE/basis-link/presets/basic/Standard" "$OOUSERDIR/user/basic"
 
-cd "$OOINSTBASE/smoketest"
+cd "$OOINSTBASE/basis-link/smoketest"
 $PERL smoketest.pl
