--- a/configure.in
+++ b/configure.in
@@ -596,7 +596,7 @@ AC_CHECK_HEADER(security/pam_appl.h, have_pam=true, have_pam=false)
 AC_CHECK_HEADER(png.h, have_png=true, have_png=false)
 AC_CHECK_HEADER(zlib.h, have_zlib=true, have_zlib=false)
 
-if test "z$with_win32" = "z"; then
+if test "z$with_win32" = "z" -a "z`uname -s`" != "zDarwin"; then
     if test "z$enable_pam" != "zno" && ! $have_pam; then
 	AC_MSG_ERROR(install pam-devel)
     fi
@@ -726,13 +726,13 @@ AC_SUBST(OOOP_TEMPLATES_PACK)
 AC_MSG_CHECKING([for widget sets])
 OOO_WIDGET_FLAGS=
 if test "$enable_kde" != "no"; then
-   if test "z$with_win32" = "z"; then
+   if test "z$with_win32" = "z" -a "z`uname -s`" != "zDarwin"; then
       OOO_WIDGET_FLAGS="--enable-kde "
       widget_sets="kde"
    fi
 fi
 if test "$enable_gtk" != "no"; then
-   if test "z$with_win32" = "z"; then
+   if test "z$with_win32" = "z" -a "z`uname -s`" != "zDarwin"; then
       OOO_WIDGET_FLAGS="--enable-gtk $OOO_WIDGET_FLAGS"
       widget_sets="gtk $widget_sets"
 
@@ -906,7 +906,11 @@ AC_SUBST(LIBERATION_FONTS_VER)
 
 
 AC_MSG_CHECKING([for GNU cp])
-GNUCP=cp
+if test "z`uname -s`" = "zDarwin"; then
+   GNUCP=gcp
+else
+   GNUCP=cp
+fi
 if test "z$with_gnu_cp" != "z"; then
     if test "z${with_gnu_cp%%/*}" = "z" ; then
 	# it's an absolute path
@@ -1338,7 +1342,9 @@ distro-configs/Ark.conf
 distro-configs/Common.conf
 distro-configs/CommonLinux.conf
 distro-configs/CommonWin32.conf
+distro-configs/CommonMac.conf
 distro-configs/GoOoWin32.conf
+distro-configs/GoOoMacOSX.conf
 distro-configs/DroplineGNOME.conf
 distro-configs/DroplineGNOME64.conf
 distro-configs/Debian.conf
