--- a/distro-configs/GoOoMacOSX.conf.in
+++ b/distro-configs/GoOoMacOSX.conf.in
@@ -1,4 +1,9 @@
 --with-intro-bitmaps=\"$SRCDIR/openintro_go-oo.bmp\"
 --with-about-bitmaps=\"$SRCDIR/openabout_go-oo.bmp\"
 --with-vendor=\"Novell, Inc.\"
-
+--enable-minimizer 
+--enable-presenter-console 
+--enable-pdfimport 
+--enable-wiki-publisher 
+--enable-report-builder 
+--with-extension-integration
