--- a/distro-configs/GoOoLinux.conf.in
+++ b/distro-configs/GoOoLinux.conf.in
@@ -35,4 +35,10 @@
 --without-system-mesa-headers
 --without-unix-wrapper
 --with-fonts
+--enable-minimizer 
+--enable-presenter-console 
+--enable-pdfimport 
+--enable-wiki-publisher 
+--enable-report-builder 
+--with-extension-integration
 
