--- a/distro-configs/GoOoLinux.conf.in
+++ b/distro-configs/GoOoLinux.conf.in
@@ -37,7 +37,8 @@
 --with-fonts
 --enable-minimizer 
 --enable-presenter-console 
---enable-pdfimport 
+--enable-pdfimport
+--without-system-poppler
 --enable-wiki-publisher 
 --enable-report-builder 
 --with-extension-integration
