Internal gcc 4.2.3 and internal binutils 2.18, to make _rene_ laugh very very very loud

--- a/configure.in
+++ b/configure.in
@@ -54,8 +54,7 @@ AC_ARG_WITH(win32,
 
 AC_ARG_WITH(internal-gcc,
 [
-  --with-internal-gcc     build our own gcc (gcc-3.4.1 with enum and
-			  visibility patches).],
+  --with-internal-gcc     build our own gcc (gcc-4.2.3 vanilla).],
 ,)
 
 AC_ARG_WITH(distro,
