--- a/download.in
+++ b/download.in
@@ -213,7 +213,7 @@ print "Downloading files for @CVSTAG@\n";
 -x $WGET || die "Can't find wget - install it and try again\n";
 
 if ('@SYSTEM_GCC@' eq '') {
-    push @files, ( 'gcc-3.4.1.tar.bz2', 'gcc-3.4.1-Enums.diff', 'gcc-3.4.1-VisibilityPatch2.diff' );
+    push @files, ( 'gcc-4.2.3.tar.bz2', 'binutils-2.18.tar.bz2' );
 }
 
 if (!$SPLIT && ($download_all || '@BUILD_WIN32@' ne ''))
