Fix binutils unpacking

--- a/bin/setup.in
+++ b/bin/setup.in
@@ -209,7 +209,7 @@ BINUTILS_VER=binutils-2.18
 BINUTILS_TARBALL=binutils-2.18.tar.bz2
 BINUTILS_UNTAR_OPTIONS=jxf
 BINUTILS_DECOMPRESS_CMD="bzip2 -dc"
-BINUTILS_PATCH=
+BINUTILS_PATCHES=""
 
 OOO_SCALED_ICONS_VER=ooo-scaled-icons
 OOO_SCALED_ICONS_TARBALL=$OOO_SCALED_ICONS_VER.tar.gz
