Adding --disable-randr-link to GoOoLinux

--- a/distro-configs/GoOoLinux.conf.in
+++ b/distro-configs/GoOoLinux.conf.in
@@ -30,6 +30,7 @@
 --disable-crypt-link
 --disable-pam-link
 --disable-xrender-link
+--disable-randr-link
 --without-openldap
 --without-system-xrender-headers
 --without-system-mesa-headers
