2008-10-09  Kalman Szalai - KAMI <kamihir@freemail.hu>
* patches/dev300/speed-symbolic-functions.diff:
Fixing patching problem.
* patches/dev300/extensions_packinfo.diff:
Packinfo update.
* distro-configs/OxygenOfficeLinux.conf.in
* distro-configs/OxygenOfficeWindows.conf.in:
Configure bits.

--- a/distro-configs/OxygenOfficeWindows.conf.in
+++ b/distro-configs/OxygenOfficeWindows.conf.in
@@ -1,7 +1,7 @@
 --with-intro-bitmaps=\"$SRCDIR/openintro_ooop.bmp\"
 --with-about-bitmaps=\"$SRCDIR/openabout_ooop.bmp\"
 --with-vendor=\"OxygenOffice Professional Team\"
---with-build-version=\"OxygenOffice Professional 2.9.0 M22 (3.0 Betas) - OxygenOffice Build 1\"
+--with-build-version=\"OxygenOffice Professional 2.9.0 M009 (3.0 Betas) - OxygenOffice Build 9\"
 --enable-binfilter
 --with-vba-package-format=builtin
 --enable-vba
@@ -15,6 +15,13 @@
 --with-extra-font
 --with-extra-accessory
 --with-lang=\"hu de fr it tr ka fi pl nl pt-BR es ja zh-CN sv cs-CZ ko\"
---enable-sdext
---enable-reportdesign
---enable-cairo
+--disable-cairo
+--with-extensions 
+--with-extension-integration
+--enable-minimizer 
+--enable-presenter-console 
+--enable-pdfimport
+--without-system-poppler
+--enable-wiki-publisher 
+--enable-report-builder
+--with-sun-templates
