Revert KAMIs changes from 2008-10-09 since they break the extras build
* patches/dev300/speed-symbolic-functions.diff,
patches/dev300/extensions_packinfo.diff,
patches/dev300/scp2_accessories.diff,
patches/dev300/apply: revert KAMIs changes from 2008-10-09 since
they break the extras build

--- a/distro-configs/OxygenOfficeLinux.conf.in
+++ b/distro-configs/OxygenOfficeLinux.conf.in
@@ -1,7 +1,7 @@
 --with-intro-bitmaps=\"$SRCDIR/openintro_ooop.bmp\"
 --with-about-bitmaps=\"$SRCDIR/openabout_ooop.bmp\"
 --with-vendor=\"OxygenOffice Professional Team\"
---with-build-version=\"OxygenOffice Professional 2.9.0 M009 (3.0 Betas) - OxygenOffice Build 9\"
+--with-build-version=\"OxygenOffice Professional 2.9.0 M22 (3.0 Betas) - OxygenOffice Build 1\"
 --enable-binfilter
 --with-vba-package-format=builtin
 --enable-vba
@@ -28,23 +28,16 @@
 --with-extra-accessory
 --with-lang=\"en-US hu de fr it tr ka fi pl nl pt-BR es ja zh-CN sv cs-CZ ko\"
 --enable-opengl
---enable-ogltrans
 --enable-dbus
 --enable-gnome-vfs
+--enable-sdext
+--enable-ogltrans
 --enable-mono
+--enable-reportdesign
 --enable-neon
 --without-system-stdlibs
 --with-system-nas
 --with-system-freetype
 --with-jdk-home=/usr/local/jdk1.5.0_15/
---with-extensions 
---with-extension-integration
---enable-minimizer 
---enable-presenter-console 
---enable-pdfimport
---without-system-poppler
---enable-wiki-publisher 
---enable-report-builder
---with-sun-templates
---with-linker-hash-style=both
+
 
