--- a/patches/dev300/system-python-ure-bootstrap.diff.in
+++ b/patches/dev300/system-python-ure-bootstrap.diff.in
@@ -13,7 +13,7 @@
  _g_delegatee = __builtin__.__dict__["__import__"]
  
 +if getattr(os.environ, 'URE_BOOTSTRAP', None) is None:
-+    os.environ['URE_BOOTSTRAP'] = "vnd.sun.star.pathname:/usr/lib/openoffice/program/fundamentalrc"
++    os.environ['URE_BOOTSTRAP'] = "vnd.sun.star.pathname:@libdir@/@OOOINSTALLDIRNAME@/program/fundamentalrc"
 +
  def getComponentContext():
      """ returns the UNO component context, that was used to initialize the python runtime.
