--- a/bin/oosmoketest.in
+++ b/bin/oosmoketest.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 GUI="UNX"
-TEMP="/tmp"
+TEMP="`mktemp -q -d`"
 PERL="/usr/bin/perl"
 OOINSTBASE="@OOINSTBASE@"
 OOUSERDIR="$HOME/.openoffice.org/3"
@@ -12,3 +12,5 @@ test -d "$OOUSERDIR/user/basic" && cp -r "$OOINSTBASE/basis-link/presets/basic/S
 
 cd "$OOINSTBASE/basis-link/smoketest"
 $PERL smoketest.pl
+rm -rf $TEMP
+
