--- a/configure.in
+++ b/configure.in
@@ -779,6 +779,9 @@ AC_SUBST(CAIRO_CONFIGURE_FLAG)
 PREBUILT_WRITINGAIDS_TIMESTAMP=20080320
 AC_SUBST(PREBUILT_WRITINGAIDS_TIMESTAMP)
 
+PREBUILT_EXTENSIONAIDS_TIMESTAMP=20081017
+AC_SUBST(PREBUILT_EXTENSIONAIDS_TIMESTAMP)
+
 BUILD_MOZILLA_SOURCE='mozilla-source-1.7.5.tar.gz'
 AC_SUBST(BUILD_MOZILLA_SOURCE)
 
