Added FSFhu distro bits
* configure.in,
* download.in,
* bin/unpack,
* distro-configs/FSFhuLinux.conf.in,
* distro-configs/FSFhuMacOSX.conf.in,
* distro-configs/FSFhuWindows.conf.in,
* patches/dev-300/apply: Added FSFhu distro bits

--- a/download.in
+++ b/download.in
@@ -66,7 +66,7 @@ sub trim($)
 # Prebuilt dictionaries for Novell Windows builds
     'writingaids.*\.zip'                 => '@MIRROR@/SRC680',
 
-# Prebuilt extension dictionaries for OxygenOffice builds
+# Prebuilt extension dictionaries for OxygenOffice and FSFhu builds
     'extensionaids.*\.zip'                 => 'http://ftp.devall.hu/kami/go-oo/',
 # Win32 bits:
     'unicows\.exe'			 => 'http://download.microsoft.com/download/b/7/5/b75eace3-00e2-4aa0-9a6f-0b6882c71642',
@@ -267,7 +267,7 @@ else
 push @files, ( 'writingaids-@PREBUILT_WRITINGAIDS_TIMESTAMP@.zip' ) if '@DISTRO@' =~ m/NovellWin32|GoOoWin32|OxygenOfficeLinux|OxygenOfficeWindows/;
 push @files, ( 'writingaids-doc-@PREBUILT_WRITINGAIDS_TIMESTAMP@.zip' ) if '@DISTRO@' =~ m/NovellWin32|GoOoWin32|OxygenOfficeLinux|OxygenOfficeWindows/;
 
-push @files, ( 'extensionaids-@PREBUILT_EXTENSIONAIDS_TIMESTAMP@.zip' ) if '@DISTRO@' =~ m/OxygenOfficeLinux|OxygenOfficeWindows/;
+push @files, ( 'extensionaids-@PREBUILT_EXTENSIONAIDS_TIMESTAMP@.zip' ) if '@DISTRO@' =~ m/OxygenOfficeLinux|OxygenOfficeWindows|FSFhu/;
 
 if ('@CAIRO_ENABLED@' eq 'TRUE' && '@SYSTEM_CAIRO@' ne 'TRUE') {
     push @files, ( 'cairo-@CAIRO_VER@.tar.gz' );
@@ -384,6 +384,7 @@ if ($distro eq 'Ark' ||
     $distro eq 'SUSE-9.1' || $distro eq 'SUSE-9.2' || $distro eq 'SUSE-9.3' ||
     $distro eq 'NovellWin32' || $distro eq 'GoOoWin32' ||
     $distro eq 'OxygenOfficeLinux' || $distro eq 'OxygenOfficeWindows' || 
+    $distro eq 'FSFhuLinux' || $distro eq 'FSFhuWindows' || 
     $distro eq 'translate-org-za-linux' || $distro eq 'translate-org-za-win32' || $distro eq 'Pardus') {
     push @files, ( source_file( "libs_extern_sys" ) );
 }
