--- a/distro-configs/FSFhuLinux.conf.in
+++ b/distro-configs/FSFhuLinux.conf.in
@@ -1,32 +1,35 @@
 --with-intro-bitmaps=\"$SRCDIR/openintro_fsfhu.bmp\"
 --with-vendor=\"FSF.hu Alapítvány\"
---with-lang=hu
+--with-package-format=\"rpm deb\"
 --disable-access
 --enable-cairo
 --without-system-cairo
 --enable-gstreamer
---enable-odk
+--disable-odk
+--disable-qadevooo
+--disable-fontooo
 --enable-binfilter
 --enable-gnome-vfs
 --disable-libsn
 --enable-lockdown
 --enable-opengl
 --enable-ogltrans
---with-ant-home=/usr/share/ant
 --with-java-target-version=1.5
 --with-jdk-home=$JAVA_HOME
---without-myspell-dicts
+--with-ant-home=/usr/share/ant 
 --enable-epm
 --enable-kde
 --without-system-mozilla
 --without-system-freetype
 --without-system-jpeg
+--without-system-openssl
 --without-system-libxml
 --without-system-libxslt
 --without-system-python
 --without-system-zlib
 --without-system-jars
 --without-system-stdlibs
+--without-system-poppler
 --disable-crypt-link
 --disable-pam-link
 --disable-xrender-link
@@ -39,9 +42,8 @@
 --enable-minimizer 
 --enable-presenter-console 
 --enable-pdfimport
---without-system-poppler
 --enable-wiki-publisher 
 --enable-report-builder 
 --with-extension-integration
 --with-linker-hash-style=both
-
+--with-myspell-dicts
