2008-11-15  Kalman Szalai - KAMI <kamihir@freemail.hu>
* po/ooo-build-ka.po
* po/ooo-build-ka.sdf:
Updated ka translation.

* distro-configs/OxygenOfficeLinux.conf.in
* distro-configs/OxygenOfficeWindows.conf.in:
Updated OxygenOffice build bits.

--- a/distro-configs/OxygenOfficeLinux.conf.in
+++ b/distro-configs/OxygenOfficeLinux.conf.in
@@ -1,7 +1,7 @@
 --with-intro-bitmaps=\"$SRCDIR/openintro_ooop.bmp\"
 --with-about-bitmaps=\"$SRCDIR/openabout_ooop.bmp\"
 --with-vendor=\"OxygenOffice Professional Team\"
---with-build-version=\"OxygenOffice Professional 2.9.0 M009 (3.0 Betas) - OxygenOffice Build 9\"
+--with-build-version=\"OxygenOffice Professional 3.0.0 M009 - OxygenOffice Build 9\"
 --enable-binfilter
 --with-vba-package-format=builtin
 --enable-vba
@@ -47,4 +47,5 @@
 --enable-report-builder
 --with-sun-templates
 --with-linker-hash-style=both
+--enable-crashdump
 
