--- a/distro-configs/OxygenOfficeWindows.conf.in
+++ b/distro-configs/OxygenOfficeWindows.conf.in
@@ -1,7 +1,7 @@
 --with-intro-bitmaps=\"$SRCDIR/openintro_ooop.bmp\"
 --with-about-bitmaps=\"$SRCDIR/openabout_ooop.bmp\"
 --with-vendor=\"OxygenOffice Professional Team\"
---with-build-version=\"OxygenOffice Professional 2.9.0 M009 (3.0 Betas) - OxygenOffice Build 9\"
+--with-build-version=\"OxygenOffice Professional 3.0.0 M009 - OxygenOffice Build 9\"
 --enable-binfilter
 --with-vba-package-format=builtin
 --enable-vba
@@ -25,3 +25,5 @@
 --enable-wiki-publisher 
 --enable-report-builder
 --with-sun-templates
+--enable-crashdump
+
