Mention which branch this is.
* configure.in: Mention which branch this is.

--- a/configure.in
+++ b/configure.in
@@ -1500,12 +1500,10 @@ To build run:
 $warn_use_download	make
 	bin/ooinstall <path-to-install>
 
-	This is trunk - the unstable branch for post-2.4 development.
-	If you want to build the stable OOo, use:
-		ooo-build-2-2    branch for 2.2
-		ooo-build-2-3    branch for 2.3
-		ooo-build-2-4    branch for 2.4
-		ooo-build-3-0    branch for 3.0
+	This is opensuse-11-1 - the stable branch for the 3.0 release
+	in openSUSE 11.1 and SLED11
+
+	If you want to build something unstable and risky, use trunk.
 "
 
 if test "$BUILD_WIN32" != "yes" -a "$ENABLE_ICECREAM" != "yes"; then
