--- a/bin/setup.in
+++ b/bin/setup.in
@@ -51,6 +51,10 @@ PREBUILT_EXTENSIONAIDS_TIMESTAMP=@PREBUILT_EXTENSIONAIDS_TIMESTAMP@
 SYSTEM_LIBWPD=@SYSTEM_LIBWPD@
 SYSTEM_LIBWPG=@SYSTEM_LIBWPG@
 SYSTEM_LIBWPS=@SYSTEM_LIBWPS@
+UNSTABLE_LIBWPD=@UNSTABLE_LIBWPD@
+LIBWPD_TARBALL=@LIBWPD_TARBALL@
+LIBWPG_TARBALL=@LIBWPG_TARBALL@
+LIBWPS_TARBALL=@LIBWPS_TARBALL@
 GLITZ_VER=@GLITZ_VER@
 DEJAVU_FONTS_VER=@DEJAVU_FONTS_VER@
 DEJAVU_FONTS_PACK_NAME=@DEJAVU_FONTS_PACK_NAME@
