--- a/configure.in
+++ b/configure.in
@@ -169,6 +169,21 @@ AC_ARG_WITH(system-libwpg,
   --with-system-libwpg     Use system libwpg* library
 ],,)
 
+AC_ARG_WITH(unstable-libwpd,
+[
+  --with-unstable-libwpd     Use new unstable libwpd* library
+],,)
+
+AC_ARG_WITH(unstable-libwps,
+[
+  --with-unstable-libwps     Use new unstable libwps* library
+],,)
+
+AC_ARG_WITH(unstable-libwpg,
+[
+  --with-unstable-libwpg     Use new unstable libwpg* library
+],,)
+
 AC_ARG_ENABLE(cairo,
 [
   --enable-cairo          Enables cairo canvas backend.],
@@ -1193,26 +1208,48 @@ AC_SUBST(ENABLE_ACCESS)
 AC_SUBST(MDBTOOLS_SRC)
 AC_SUBST(SYSTEM_MDBTOOLS)
 
+
+UNSTABLE_LIBWPD=NO
 if test -n "$with_system_libwpd" && test "$with_system_libwpd" = "yes"; then
     SYSTEM_LIBWPD=YES
 else
     SYSTEM_LIBWPD=NO
+    if test -n "$with_unstable_libwpd" && test "$with_unstable_libwpd" = "yes"; then
+	LIBWPD_TARBALL=libwpd-0.9.0~CVS20081118.tar.gz
+	UNSTABLE_LIBWPD=YES
+    else
+	LIBWPD_TARBALL=libwpd-0.8.14.tar.gz
+    fi
 fi
 AC_SUBST(SYSTEM_LIBWPD)
+AC_SUBST(UNSTABLE_LIBWPD)
+AC_SUBST(LIBWPD_TARBALL)
 
 if test -n "$with_system_libwps" && test "$with_system_libwps" = "yes"; then
     SYSTEM_LIBWPS=YES
 else
     SYSTEM_LIBWPS=NO
+    if test -n "$with_unstable_libwps" && test "$with_unstable_libwps" = "yes"; then
+	LIBWPS_TARBALL=libwps-0.2.0~CVS20081118.tar.gz
+    else
+	LIBWPS_TARBALL=libwps-0.1.2.tar.gz
+    fi
 fi
 AC_SUBST(SYSTEM_LIBWPS)
+AC_SUBST(LIBWPS_TARBALL)
 
 if test "$with_system_libwpg" = "yes"; then
     SYSTEM_LIBWPG=YES
 else
     SYSTEM_LIBWPG=NO
+    if test -n "$with_unstable_libwpg" && test "$with_unstable_libwpg" = "yes"; then
+	LIBWPG_TARBALL=libwpg-0.2.0~CVS20081118.tar.gz
+    else
+	LIBWPG_TARBALL=libwpg-0.1.3.tar.gz
+    fi
 fi
 AC_SUBST(SYSTEM_LIBWPG)
+AC_SUBST(LIBWPG_TARBALL)
 
 
 AC_MSG_CHECKING([for Sun Professional Template Pack intergration (only supported languages displayed)])
@@ -1477,6 +1514,7 @@ $warn_use_download	make
 	bin/ooinstall <path-to-install>
 
 	This is ooo-build-3-0 - the stable branch for the 3.0 release.
+	If you want to use OOo-3.0.1, use the ooo-build-3-0-1 branch.
 	If you want to build something cool, unstable, and risky, use trunk.
 "
 
