--- a/bin/setup.in
+++ b/bin/setup.in
@@ -48,10 +48,10 @@ CAIRO_ENABLED=@CAIRO_ENABLED@
 SYSTEM_CAIRO=@SYSTEM_CAIRO@
 PREBUILT_WRITINGAIDS_TIMESTAMP=@PREBUILT_WRITINGAIDS_TIMESTAMP@
 PREBUILT_EXTENSIONAIDS_TIMESTAMP=@PREBUILT_EXTENSIONAIDS_TIMESTAMP@
+UNSTABLE_WP=@UNSTABLE_WP@
 SYSTEM_LIBWPD=@SYSTEM_LIBWPD@
 SYSTEM_LIBWPG=@SYSTEM_LIBWPG@
 SYSTEM_LIBWPS=@SYSTEM_LIBWPS@
-UNSTABLE_LIBWPD=@UNSTABLE_LIBWPD@
 LIBWPD_TARBALL=@LIBWPD_TARBALL@
 LIBWPG_TARBALL=@LIBWPG_TARBALL@
 LIBWPS_TARBALL=@LIBWPS_TARBALL@
