--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT(ooo-build, 3.0.0.3.5)
+AC_INIT(ooo-build, 3.0.0.3.6)
 AC_PREREQ(2.51)
 AC_CONFIG_SRCDIR(bin/build-ooo)
 AC_PREFIX_DEFAULT(/usr)
@@ -169,19 +169,9 @@ AC_ARG_WITH(system-libwpg,
   --with-system-libwpg     Use system libwpg* library
 ],,)
 
-AC_ARG_WITH(unstable-libwpd,
+AC_ARG_WITH(unstable-wp,
 [
-  --with-unstable-libwpd     Use new unstable libwpd* library
-],,)
-
-AC_ARG_WITH(unstable-libwps,
-[
-  --with-unstable-libwps     Use new unstable libwps* library
-],,)
-
-AC_ARG_WITH(unstable-libwpg,
-[
-  --with-unstable-libwpg     Use new unstable libwpg* library
+  --with-unstable-wp       Use new unstable libwp* libraries
 ],,)
 
 AC_ARG_ENABLE(cairo,
@@ -1209,27 +1199,32 @@ AC_SUBST(MDBTOOLS_SRC)
 AC_SUBST(SYSTEM_MDBTOOLS)
 
 
-UNSTABLE_LIBWPD=NO
+UNSTABLE_WP=NO
+if test -n "$with_unstable_wp" && test "$with_unstable_wp" = "yes"; then
+    UNSTABLE_WP=YES
+else
+    UNSTABLE_WP=NO
+fi
+AC_SUBST(UNSTABLE_WP)
+
 if test -n "$with_system_libwpd" && test "$with_system_libwpd" = "yes"; then
     SYSTEM_LIBWPD=YES
 else
     SYSTEM_LIBWPD=NO
-    if test -n "$with_unstable_libwpd" && test "$with_unstable_libwpd" = "yes"; then
+    if test -n "$UNSTABLE_WP" = "YES"; then
 	LIBWPD_TARBALL=libwpd-0.9.0~CVS20081118.tar.gz
-	UNSTABLE_LIBWPD=YES
     else
 	LIBWPD_TARBALL=libwpd-0.8.14.tar.gz
     fi
 fi
 AC_SUBST(SYSTEM_LIBWPD)
-AC_SUBST(UNSTABLE_LIBWPD)
 AC_SUBST(LIBWPD_TARBALL)
 
 if test -n "$with_system_libwps" && test "$with_system_libwps" = "yes"; then
     SYSTEM_LIBWPS=YES
 else
     SYSTEM_LIBWPS=NO
-    if test -n "$with_unstable_libwps" && test "$with_unstable_libwps" = "yes"; then
+    if test -n "$UNSTABLE_WP" = "YES"; then
 	LIBWPS_TARBALL=libwps-0.2.0~CVS20081118.tar.gz
     else
 	LIBWPS_TARBALL=libwps-0.1.2.tar.gz
@@ -1242,7 +1237,7 @@ if test "$with_system_libwpg" = "yes"; then
     SYSTEM_LIBWPG=YES
 else
     SYSTEM_LIBWPG=NO
-    if test -n "$with_unstable_libwpg" && test "$with_unstable_libwpg" = "yes"; then
+    if test -n "$UNSTABLE_WP" = "YES"; then
 	LIBWPG_TARBALL=libwpg-0.2.0~CVS20081118.tar.gz
     else
 	LIBWPG_TARBALL=libwpg-0.1.3.tar.gz
