--- a/bin/setup.in
+++ b/bin/setup.in
@@ -48,9 +48,13 @@ CAIRO_VER=@CAIRO_VER@
 CAIRO_ENABLED=@CAIRO_ENABLED@
 SYSTEM_CAIRO=@SYSTEM_CAIRO@
 PREBUILT_WRITINGAIDS_TIMESTAMP=@PREBUILT_WRITINGAIDS_TIMESTAMP@
+UNSTABLE_WP=@UNSTABLE_WP@
 SYSTEM_LIBWPD=@SYSTEM_LIBWPD@
 SYSTEM_LIBWPG=@SYSTEM_LIBWPG@
 SYSTEM_LIBWPS=@SYSTEM_LIBWPS@
+LIBWPD_TARBALL=@LIBWPD_TARBALL@
+LIBWPG_TARBALL=@LIBWPG_TARBALL@
+LIBWPS_TARBALL=@LIBWPS_TARBALL@
 GLITZ_VER=@GLITZ_VER@
 DEJAVU_FONTS_VER=@DEJAVU_FONTS_VER@
 DEJAVU_FONTS_PACK_NAME=@DEJAVU_FONTS_PACK_NAME@
