--- a/download.in
+++ b/download.in
@@ -104,11 +104,17 @@ sub trim($)
 #    'OOOP-.*\.zip'                 	 => 'http://kent.dl.sf.net/sourceforge/ooop/'
     'OOOP-.*\.zip'                 	 => 'http://ftp.devall.hu/kami/go-oo/',
 # Sun Professional Template Pack
-    'Sun_ODF_Template_Pack_en-US.oxt'	 => 'http://extensions.services.openoffice.org/files/273/0/',
-    'Sun_ODF_Template_Pack_de.oxt'	 => 'http://extensions.services.openoffice.org/files/295/1/',
-    'Sun_ODF_Template_Pack_it.oxt'	 => 'http://extensions.services.openoffice.org/files/299/0/',
-    'Sun_ODF_Template_Pack_fr.oxt'	 => 'http://extensions.services.openoffice.org/files/297/0/',
-    'Sun_ODF_Template_Pack_es.oxt'	 => 'http://extensions.services.openoffice.org/files/301/1/'
+# It seems extensions with acceptable license hangs on Windows, so this is workaround with a modded version of extensions.
+#   'Sun_ODF_Template_Pack_en-US.oxt'	 => 'http://extensions.services.openoffice.org/files/273/0/',
+    'Sun_ODF_Template_Pack_en-US.oxt'	 => 'http://ftp.devall.hu/kami/go-oo/',
+#   'Sun_ODF_Template_Pack_de.oxt'	 => 'http://extensions.services.openoffice.org/files/295/1/',
+    'Sun_ODF_Template_Pack_de.oxt'	 => 'http://ftp.devall.hu/kami/go-oo/',
+#   'Sun_ODF_Template_Pack_it.oxt'	 => 'http://extensions.services.openoffice.org/files/299/0/',
+    'Sun_ODF_Template_Pack_it.oxt'	 => 'http://ftp.devall.hu/kami/go-oo/',
+#   'Sun_ODF_Template_Pack_fr.oxt'	 => 'http://extensions.services.openoffice.org/files/297/0/',
+    'Sun_ODF_Template_Pack_fr.oxt'	 => 'http://ftp.devall.hu/kami/go-oo/',
+#   'Sun_ODF_Template_Pack_es.oxt'	 => 'http://extensions.services.openoffice.org/files/301/1/'
+    'Sun_ODF_Template_Pack_es.oxt'	 => 'http://ftp.devall.hu/kami/go-oo/'
 
 );
 
