--- a/configure.in
+++ b/configure.in
@@ -1384,6 +1384,8 @@ AC_OUTPUT([
 Makefile
 bin/setup
 bin/Makefile
+patches/dev300/pyuno-rpath-ooodir.diff
+patches/dev300/system-python-ure-bootstrap.diff
 bin/piece/sys-setup
 bin/piece/Makefile
 desktop/Makefile
