+2008-12-17  Rene Engelhard  <rene@debian.org> + +	* bin/ootesttool.in: fix path

--- a/bin/ootesttool.in
+++ b/bin/ootesttool.in
@@ -2,4 +2,4 @@
 
 LD_LIBRARY_PATH="@OOINSTBASE@/program:$LD_LIBRARY_PATH"
 
-exec @OOINSTBASE@/program/testtool.bin "$@"
+exec @OOINSTBASE@/basis-link/program/testtool.bin "$@"
