--- a/configure.in
+++ b/configure.in
@@ -1310,6 +1310,8 @@ elif test "$with_tag" = "BEB300_m3" ; then
    UPSTREAM_VERSION=3.0.0beta2
 elif test "$with_tag" = "OOO300_m9" ; then
    UPSTREAM_VERSION=3.0.0
+elif test "$with_tag" = "OOO300_m14" ; then
+   UPSTREAM_VERSION=3.0.1
 fi
 if test -n "$UPSTREAM_VERSION"; then
    UPSTREAM_NAME="OOo_${UPSTREAM_VERSION}_src"
