--- a/configure.in
+++ b/configure.in
@@ -3,9 +3,9 @@ AC_PREREQ(2.51)
 AC_CONFIG_SRCDIR(bin/build-ooo)
 AC_PREFIX_DEFAULT(/usr)
 
-DEFAULT_TAG=ooo300-m14
+DEFAULT_TAG=ooo300-m15
 # For the upstream packages it is like:
-# DEFAULT_TAG=OOH680_m12
+# DEFAULT_TAG=OOO300_m15
 
 # The option tar-ustar is necessary because of some patches have too long
 # names so that they cannot be archived using the old V7 format
