--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,6 +22,7 @@ EXTRA_DIST=\
 	openabout_translateorgza.png \
 	openintro_pld.bmp \
 	openabout_pld.bmp \
+	sg3.sdg sg3.sdv sg3.thm \
 	tango_mainapp_16.png \
 	glib-1.2.10-ooo.patch \
 	libIDL-0.6.8-ooo.patch \
