Modify all relevant distributions so that they find the splash and open-about images

--- a/distro-configs/GoOoLinux.conf.in
+++ b/distro-configs/GoOoLinux.conf.in
@@ -1,5 +1,5 @@
---with-intro-bitmaps=\"$SRCDIR/openintro_go-oo.bmp\"
---with-about-bitmaps=\"$SRCDIR/openabout_go-oo.bmp\"
+--with-intro-bitmaps=\"$TOOLSDIR/src/openintro_go-oo.bmp\"
+--with-about-bitmaps=\"$TOOLSDIR/src/openabout_go-oo.bmp\"
 --with-vendor=\"Novell, Inc.\"
 --disable-access
 --enable-cairo
@@ -44,4 +44,4 @@
 --enable-report-builder 
 --with-extension-integration
 --with-linker-hash-style=both
-
+--with-ant-home=$BUILDDIR/apache-ant-1.7.0
