--- a/distro-configs/OxygenOfficeWindows.conf.in
+++ b/distro-configs/OxygenOfficeWindows.conf.in
@@ -1,5 +1,5 @@
---with-intro-bitmaps=\"$SRCDIR/openintro_ooop.bmp\"
---with-about-bitmaps=\"$SRCDIR/openabout_ooop.bmp\"
+--with-intro-bitmaps=\"$TOOLSDIR/src/openintro_ooop.bmp\"
+--with-about-bitmaps=\"$TOOLSDIR/src/openabout_ooop.bmp\"
 --with-vendor=\"OxygenOffice Professional Team\"
 --with-build-version=\"OxygenOffice Professional 3.0.1 M012 - OxygenOffice Build 0\"
 --enable-binfilter
