When ./download receives the --all option, download also the apache-ant, needed for GoOoWin32 build

--- a/download.in
+++ b/download.in
@@ -267,6 +267,9 @@ else
     if ('@ENABLE_MONO@' ne 'FALSE') {
 	push @files, ( 'ooo-cli-prebuilt-3.0.1.tar.bz2' );
     }
+    if ( $download_all ) {
+    	push @files, ( "apache-ant-1.7.0-bin.tar.gz" );
+    }
 }
 
 # Prebuilt dictionaries
