Added external source files to be ignored.
* .gitignore: Added external source files to be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ Makefile.in
 /intltool-merge
 /intltool-update
 /missing
+
+# external source files
+/src/biblio.*
+/src/extras-3.*
+/src/GSI_*.sdf.*
+/src/OOo_*_src_*
+/src/scsolver.*
+/src/setup_native_packinfo-*
+/src/unowinreg.*
